--- a/2.html
+++ b/2.html
@@ -5,27 +5,13 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html" target="_blank">WEB</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html" target="_blank">HTML</a></li>
-    <li><a href="2.html" target="_blank">CSS</a></li>
-    <li><a href="3.html" target="_blank">JavaScript</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>CSS란 무엇인가?</h2>
-  <p>종속형 시트 또는 캐스케이딩 스타일 시트(Cascading Style Sheets, CSS)는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로, HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이며, 레이아웃과 스타일을 정의할 때의 자유도가 높다.
-  </p>
-
-<h3>달이 떴다고 전화를 주시다니요 -김용택</h3>
-<p>달이 떴다고 전화를 주시다니요<br>
-이 밤이 너무 신나고 근사해</p>
-
-<p>가야 할 길 보다,<br>
-거쳐온 길을 보면서<br>
-자기에게 유리하게 상황을 해석하셨으면 좋겠습니다.<br>
-<u>자기만큼은 자기의 편이 되어야죠</u></p>
-
-<p>공부를 하면<br>
-보이지 않던 것이 보이기 시작합니다.<br>
-들리지 않던 것이 들리기 시작합니다.</p>
+  <p>종속형 시트 또는 캐스케이딩 스타일 시트(Cascading Style Sheets, CSS)는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로, HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이며, 레이아웃과 스타일을 정의할 때의 자유도가 높다.</p>
 </body>
 </html>
