--- a/1.html
+++ b/1.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html" target="_blank">WEB</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html" target="_blank">HTML</a></li>
-    <li><a href="2.html" target="_blank">CSS</a></li>
-    <li><a href="3.html" target="_blank">JavaScript</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
 
 <h2>HTML이란 무엇인가?</h2>
